--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,39 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.Square {
+  border: 2px solid #999;
+  line-height: 34px;
   height: 80px;
+  margin: 5px;
+  display: block;
+  text-align: center;
+  max-width: 160px;
+  min-width: 80px;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  border-radius: 50px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.Sqaure div {
+  position: relative;
+  max-width: 160px;
+  min-width: 30px;
+  border-radius: 4px;
+  top: -400px;
+  transition: transform 0.5s;
 }
 
-.App-title {
-  font-size: 1.5em;
+.Game {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
 }
 
-.App-intro {
-  font-size: large;
-}
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Board {
+  display: flex;
+  background: #e8e0e0;
+  border-radius: 15px;
+  padding: 34px;
 }
